--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -14,4 +14,8 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ ca770ad5-9746-4afe-b356-9ee48ee56e8c.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ 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.GH_TOKEN }}
+          SHOW_PROJECTS: "False"
+          SHOW_LINES_OF_CODE: "True"
+          SHOW_LOC_CHART: "False"
+          LOCALE: "en"
         
