--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -7,14 +7,24 @@ on:
   workflow_dispatch:
 jobs:
   update-readme:
-    name: Update Readme with Metrics
-    runs-on: ubuntu-latest
+
+  - name: Profile Readme Development Stats
+  uses: anmol098/waka-readme-stats@V3
     steps:
       - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ ca770ad5-9746-4afe-b356-9ee48ee56e8c.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ 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.GH_TOKEN }}
+          SHOW_COMMIT: "True"
+          SHOW_DAYS_OF_WEEK: "True"
+          SHOW_LANGUAGE: "True"
+          SHOW_OS: "True"
           SHOW_PROJECTS: "True"
+          SHOW_TIMEZONE: "True"
+          SHOW_EDITORS: "True"
+          SHOW_LANGUAGE_PER_REPO: "True"
+          SHOW_SHORT_INFO: "True"
+
           SHOW_LINES_OF_CODE: "True"
           SHOW_LOC_CHART: "True"
           LOCALE: "en"
