--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v2
-      - uses: jamesgeorge007/github-activity-readme@master
+    - name: GitHub - Activity - Readme
+    - uses: jamesgeorge007/github-activity-readme@v0.3.6
+
         env:
           GITHUB_TOKEN: ${{ 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.GITHUB_TOKEN }}
