--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -10,5 +10,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          max_post_count: "4"
-          feed_list: "https://dev.to/feed/https://dev.to/eke, https://eke.hashnode.dev/rss.xml, https://feedly.com/i/subscription/feed/https://www.freecodecamp.org/news/author/victoreke/rss/"
+          max_post_count: "6"
+          feed_list: "https://dev.to/feed/https://dev.to/rahulsinghparmar, https://rahulsinghparmar.hashnode.dev/rss.xml"
